# AEDA-Project

Code/: AEDAPROJECT.ilk  BST.cpp  BST.h  CMakeLists.txt  Client.cpp  Client.h  Exceptions.cpp  Exceptions.h  FileManager.cpp  FileManager.h  ProgramLoop.cpp  ProgramLoop.h  TollBooth.cpp  TollBooth.h  TollBooth_Update.txt  Vehicle.cpp  Vehicle.h  Vehicles_Update.txt  Worker_Update.txt  Workers.cpp  Workers.h  hash_table.cpp  hash_table.h  intervention.cpp  intervention.h  interventions.txt  main.cpp  menu.h  priority_queue.cpp  priority_queue.h  tec.txt  technician.cpp  technician.h  tollbooth.txt  utils.cpp  utils.h  vehicles.txt  workers.txt
Code/html/: _exceptions_8h_source.html  _file_manager_8h_source.html  _program_loop_8h_source.html  _vehicle_8h_source.html  class_cant_open_file-members.html  class_cant_open_file.html  class_client.html  class_no_lanes_available-members.html  class_no_worker_available-members.html  class_no_worker_available.html  class_not_a_member_of.html  class_not_a_valid_day-members.html  class_not_a_valid_day.html  class_not_vehicle_classe-members.html  class_not_vehicle_classe.html  class_program_loop.html  class_toll_booth-members.html  class_vehicle-members.html  class_vehicle.html  classclasse__1.html  classclasse__2.html  classclasse__4.html  functions.html  index.html
Code/latex/: annotated.tex  class_cant_open_file.tex  class_client.eps  class_client.tex  class_element_not_in_vec.tex  class_file_manager.tex  class_no_lanes_available.tex  class_no_worker_available.tex  class_not_a_member_of.tex  class_not_a_valid_day.tex  refman.tex  (+15 more)
(+66 files in other folders)
